Bug 1608010 - Support reversed range for <input type=time>; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D64416

--HG--
extra : moz-landing-system : lando